--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 Color Scheme:
 primary color: steel blue: rgb(100, 147, 186) 
 secondary color: steel grey: #CFCED3
-tertiary color: white
+tertiary color: #ECECEA
+4th color: white
 */
 
 * {
@@ -62,7 +63,7 @@ https://images.unsplash.com/46/iYvDeqVGRbebiQv2PIJi_DSC_8407.JPG?ixlib=rb-0.3.5&
 
 */
 
-#jcimg {
+#jc-top-img {
 	height: 220px;
 	margin-top: 130px;
 	max-width: 70%;
@@ -97,6 +98,10 @@ h1 {
 
 h3{
 	margin-top: 0px;
+}
+
+.nav-item-text {
+  font-size: 1.2em;
 }
 
 /*Portfolio Header */
@@ -216,7 +221,7 @@ p {
   align-self: center;
   max-width: 500px;
   max-height: 450px;
-  margin-right: 30px;
+  /* margin-right: 10px; */
   border-radius: 4px;
   border: 8px double white;
 }
@@ -239,7 +244,6 @@ p {
 
 /*Contact Section*/
 
-
 .projects-header {
   font-family: Raleway;
 	margin: 0 auto;
@@ -253,10 +257,15 @@ p {
 
 .contact-info {
   text-align: center;
+  line-height: 1.2;
 }
 
-
+.last-contact {
+  margin-bottom: 50px;
+}
 /*Media Queries*/
+
+
 
 @media (max-width: 760px) {
   #about-container, #projects-container {
@@ -277,6 +286,17 @@ p {
   .project-img {
     width: 350px;
     height: 200px;
-
   }
 }
+
+@media (max-width: 480px) {
+  #headercontent {
+    font-size: .6em;
+  }
+}
+
+
+
+
+
+/* and (min-width: 480px) */
