--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 
 .navbar-inverse {
 background:  rgb(100, 147, 186);
+border-color: #CFCED3;
 }
 
 .navbar-inverse .navbar-nav>li>a {
@@ -103,6 +104,7 @@ h3{
   font-size: 1.2em;
 }
 
+/* 0, 0, 0, 0.3 less intense line,  */
 /*** Portfolio Header ***/
 
 #head-container {
@@ -149,7 +151,7 @@ h3{
 }
 
 #aheader {
-  text-align: center;
+  text-align: ;
 	color: white;
   margin-bottom: 20px;
   align-self: center;
@@ -160,11 +162,12 @@ h3{
   align-self: center;
   max-width: 50%;
   margin-right: 5%;
+  text-align: center;
 }
 
 p {
 	font-size: 20px;
-	text-align: center;
+	text-align: left;
 	margin: 0 auto;
   max-width: 80%;
   line-height: 1.5;
@@ -179,7 +182,7 @@ p {
   width: 350px;
   margin-right: 30px;
   border-radius: 4px;
-  border: 8px double white;
+  border: 2px solid white;
 }
 
 /*** Project Section ***/
@@ -195,25 +198,23 @@ p {
 }
 
 #projects-container {
-  background: linear-gradient(to left bottom, #CFCED3,  rgb(100, 147, 186));
+  background: linear-gradient(to left, #CFCED3,  #ECECEA);
 	margin: 10px 0;
 	color: white;
   display: flex;
   justify-content: flex-end;
-  min-height: 500px;
+  min-height: 400px;
   max-width: 85%;
   margin: 50px auto;
   border-radius: 4px;
-  border: 8px double white;
 }
 
 .project-img {
   align-self: center;
   max-width: 500px;
   max-height: 450px;
-  /* margin-right: 10px; */
   border-radius: 4px;
-  border: 8px double white;
+  border: 4px solid white;
 }
 
 .project-img:hover {
@@ -235,6 +236,10 @@ p {
   margin-bottom: 20px;
   align-self: center;
 	font-size: 3em;
+}
+
+.center-p {
+  text-align: center;
 }
 
 /*** Contact Section ***/
@@ -292,8 +297,14 @@ p {
     width: 280px;
     height: 200px;
   }
+
+
+  h3 {
+    font-size: 1.8em;
+  }
 }
 
 /* and (min-width: 480px) */
 
 
+/* double box shadow, blue then white. */
