--- a/public/style.css
+++ b/public/style.css
@@ -108,7 +108,6 @@ h3{
   font-size: 1.2em;
 }
 
-/* 0, 0, 0, 0.3 less intense line,  */
 /*** Portfolio Header ***/
 
 #head-container {
@@ -200,7 +199,7 @@ p {
 	color: white;
   display: flex;
   justify-content: flex-end;
-  min-height: 400px;
+  min-height: 450px;
   max-width: 85%;
   margin: 50px auto;
   border-radius: 4px;
@@ -237,6 +236,12 @@ p {
 
 .center-p {
   text-align: center;
+}
+
+.tech-stack {
+  font-weight: 900;
+  color: black;
+  font-size: 22px;
 }
 
 /*** Contact Section ***/
