--- a/public/style.css
+++ b/public/style.css
@@ -196,6 +196,7 @@ p {
 
 .project-img {
   align-self: center;
+  min-height: 300px;
   max-width: 500px;
   max-height: 450px;
   border-radius: 4px;
@@ -302,7 +303,7 @@ p {
 
   .project-img {
     width: 350px;
-    height: 200px;
+    min-height: 200px;
   }
 }
 
@@ -313,7 +314,7 @@ p {
 
   .project-img {
     width: 280px;
-    height: 200px;
+    min-height: 200px;
   }
 
   h3 {
