--- a/public/style.css
+++ b/public/style.css
@@ -221,6 +221,8 @@ p {
 }
 
 #projectheader {
+  font-family: Raleway;
+  letter-spacing: 2px;
   text-align: center;
 	color: #333;
   margin-bottom: 20px;
@@ -308,6 +310,10 @@ p {
   .project-img {
     width: 350px;
     min-height: 200px;
+  }
+
+  .topical {
+    max-height: 500px;
   }
 }
 
