--- a/public/style.css
+++ b/public/style.css
@@ -56,10 +56,13 @@ border-color: #CFCED3;
 #headerimg {	
   background-size: cover;
 	background-position: center;
-	background-image: linear-gradient(#9391911a, rgba(0, 0, 0, 0.1)), url("https://images.unsplash.com/46/iYvDeqVGRbebiQv2PIJi_DSC_8407.JPG?ixlib=rb-0.3.5&s=b8af2cd38c1653fb341688f619f01a18&auto=format&fit=crop&w=1053&q=80");
+  background-image: 
+  linear-gradient(#d8d6d61a, rgba(0, 0, 0, 0.9)), 
+  url("https://images.unsplash.com/46/iYvDeqVGRbebiQv2PIJi_DSC_8407.JPG?ixlib=rb-0.3.5&s=b8af2cd38c1653fb341688f619f01a18&auto=format&fit=crop&w=1053&q=80");
 	position: relative;
 	height: 700px;
 }
+/* #9391911a */
 
 #jc-top-img {
 	height: 220px;
@@ -205,6 +208,11 @@ p {
 
 .topical {
   max-height: 400px;
+  /* margin-right: 10px; */
+}
+
+.topical-right {
+  margin-right: 10px;
 }
 
 .project-img:hover {
@@ -314,6 +322,11 @@ p {
 
   .topical {
     max-height: 500px;
+    padding: 10px;
+  }
+
+  .topical-right {
+    margin-right: 0px;
   }
 }
 
