--- a/public/style.css
+++ b/public/style.css
@@ -59,7 +59,7 @@ border-color: #CFCED3;
   background-image: 
   linear-gradient(
 
-    rgb(100, 147, 186, 0.1), rgb(236, 233, 233, 0.1)), 
+    rgba(255,255,255,0.1), rgba(255,255,255,0.1)), 
   url("https://images.unsplash.com/46/iYvDeqVGRbebiQv2PIJi_DSC_8407.JPG?ixlib=rb-0.3.5&s=b8af2cd38c1653fb341688f619f01a18&auto=format&fit=crop&w=1053&q=80");
 	position: relative;
 	height: 700px;
